--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,19 @@ body,
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background: lightskyblue;
+}
+
+.label>div
+{
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    background: #00000088;
+    color: whitesmoke;
+    padding: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    border-radius: 30px;
+    user-select: none;
+
 }
